My bio with edit

--- a/biography.html
+++ b/biography.html
@@ -1,4 +1,4 @@
-﻿<<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>My bio</title>
@@ -8,38 +8,53 @@
 	
 	<div class="main">
 
-		<h1>Штурмов Игорь Станиславович</h1>
+		<div class="fullName">
+
+			<h1>Штурмов Игорь Станиславович</h1>
 	
-		<img src="images/my_photo.jpg" alt="My photo">
+				<img src="images/my_photo.jpg" alt="My photo">
 	
-		<h2>Студент курса Frontend GoIT</h2>
+			<h2>Студент курса Frontend GoIT</h2>
+
+		</div>
 	
 	<hr>
+		<div class="reason">
 
-		<p class="dark">Хочу учить фронтенд, потому что:</p>
+			<p class="dark">Хочу учить фронтенд, потому что:</p>
 
-		<ul>
-			<li>Нравится эта область программирования</li>
-			<li>Хочу сделать свой интернет-магазин в будущем</li>
-			<li>Хорошее начало для развития в IT, так как на одном HTML\CSS\JS останавливаться не собираюсь. В планах так же C#, Objective C, 	Python, Java.</li>
-		</ul>
-
-	<hr>
-
-		<p class="dark">Мои контактные номера:</p>
-			<p>+380631892954</p>
-			<p>+380996585253</p>
+				<ul>
+					<li>Нравится эта область программирования</li>
+					<li>Хочу сделать свой интернет-магазин в будущем</li>
+					<li>Хорошее начало для развития в IT, так как на одном HTML\CSS\JS останавливаться не собираюсь. В планах так же C#, Objective C, Python, Java.</li>
+				</ul>
 		
-		<p class="dark">Профиль Вконтакте:</p>
-			<a href="https://vk.com/createshadow" target="_blanc">Игорь Штурмов</a>
+		</div>
+
+	<hr>
+
+		<div class="contacts">
+			
+			<p class="dark">Мои контактные номера:</p>
+				<p>+380631892954</p>
+				<p>+380996585253</p>
 		
-		<p class="dark">Мой Skype:</p>
-			<p>createshadow</p>
+			<p class="dark">Профиль Вконтакте:</p>
+				<a href="https://vk.com/createshadow" target="_blanc">Игорь Штурмов</a>
+		
+			<p class="dark">Мой Skype:</p>
+				<p>createshadow</p>
+
+		</div>
 	
 	<hr>
 
-		<p class="dark">Мой фидбек:</p>
-			<p>Если вам нужно, я правда могу построить забор!:)</p>
+		<div class="feedback">
+
+			<p class="dark">Мой фидбек:</p>
+				<p>Если вам нужно, я правда могу построить забор!:)</p>
+
+		</div>
 
 	</div>
 
