--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My bio</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
@@ -12,7 +12,7 @@
 
 			<h1>Штурмов Игорь Станиславович</h1>
 	
-				<img src="images/my_photo.jpg" alt="My photo">
+				<img src="img/my_photo.jpg" alt="My photo">
 	
 			<h2>Студент курса Frontend GoIT</h2>
 
