--- a/Module3/index.html
+++ b/Module3/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Fitness</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+    <div class="wrapper">
+        <div class="conteiner">
+            <header>
+                <img src="img/logo.png" alt="fitness">
+                <div class="main_menu">
+                   <ul>
+                       <li><a href="#">Главная</a></li>
+                       <li><a href="#">Товары</a></li>
+                       <li><a href="#">О нас</a></li>
+                       <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+            </header>
+            <!-- <div class="main_content">
+                <div class="left_sidebar">
+                    <ul>
+                        <li><a href="#">Ноутбуки</a></li>
+                        <li><a href="#">Планшеты</a></li>
+                        <li><a href="#">Телефоны</a></li>
+                        <li><a href="#">Телевизоры</a></li>
+                        <li><a href="#">Бытовая техника</a></li>
+                        <li><a href="#">Автотовары</a></li>
+                    </ul>
+                </div>
+                <img src="img/image.jpg" alt="Bike">
+                <span>Lorem ipsum</span>
+            </div>
+        </div>
+        <footer>
+            <div class="footer">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Товары</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </div>
+        </footer>-->
+        </div>
+    </div>
+</body>
+
 </html>
