after some work

--- a/Module3/index.html
+++ b/Module3/index.html
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
             </header>
-            <!-- <div class="main_content">
+            <div class="main_content">
                 <div class="left_sidebar">
                     <ul>
                         <li><a href="#">Ноутбуки</a></li>
@@ -33,11 +33,12 @@
                         <li><a href="#">Автотовары</a></li>
                     </ul>
                 </div>
+                <div class="bike">
                 <img src="img/image.jpg" alt="Bike">
-                <span>Lorem ipsum</span>
+                </div>
+                <span class="text">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</span>          
             </div>
-        </div>
-        <footer>
+            <footer>
             <div class="footer">
                 <ul>
                     <li><a href="#">Главная</a></li>
@@ -45,10 +46,12 @@
                     <li><a href="#">О нас</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
+                <span class="sometext">2014 &copy All rights reserved</span>
             </div>
-        </footer>-->
+        </footer>
         </div>
     </div>
+
 </body>
 
 </html>
