--- a/Module3/index.html
+++ b/Module3/index.html
@@ -24,7 +24,7 @@
             </header>
             <div class="main_content">
                 <div class="left_sidebar">
-                    <ul>
+                    <ul class="sidebar">
                         <li><a href="#">Ноутбуки</a></li>
                         <li><a href="#">Планшеты</a></li>
                         <li><a href="#">Телефоны</a></li>
