--- a/Module3/index.html
+++ b/Module3/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="conteiner">
             <header>
-                <img src="img/logo.png" alt="fitness">
+                <img class="logo" src="img/logo.png" alt="fitness">
                 <div class="main_menu">
                    <ul>
                        <li><a href="#">Главная</a></li>
