--- a/Module3/index.html
+++ b/Module3/index.html
@@ -15,7 +15,7 @@
                 <img class="logo" src="img/logo.png" alt="fitness">
                 <div class="main_menu">
                    <ul>
-                       <li><a href="#">Главная</a></li>
+                       <li class="active"><a href="#">Главная</a></li>
                        <li><a href="#">Товары</a></li>
                        <li><a href="#">О нас</a></li>
                        <li><a href="#">Контакты</a></li>
